--- a/PT_session_to_outlook.ipynb
+++ b/PT_session_to_outlook.ipynb
@@ -35,36 +35,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2e7d4105-3daf-4b04-8a49-5f48ef97d74a",
+   "execution_count": 2,
+   "id": "16741b09-0562-4ae5-b222-1ab1b112927b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 5, 28, 15, 16, 51, 172528)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "DRY_RUN = True"
+    "dt.datetime.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e989285f-ff9f-4fd5-8874-e18dca75a5b0",
+   "execution_count": 11,
+   "id": "2e7d4105-3daf-4b04-8a49-5f48ef97d74a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "DRY_RUN = True\n",
+    "START_DATE = dt.datetime(2024, 5, 1)\n",
+    "START_DATE = dt.datetime.now()\n",
+    "SCOPES = ['https://www.googleapis.com/auth/calendar']\n",
     "OUTLOOK_CALENDAR = OutlookCalendar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "1647b984-f10a-4509-adae-e3de1ed655cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCOPES = ['https://www.googleapis.com/auth/calendar']\n",
-    "\n",
-    "START_DATE = dt.datetime(2024, 3, 20)\n",
-    "\n",
-    "\n",
     "def _get_credentials():\n",
     "    creds = None\n",
     "    if os.path.exists('token.json'):\n",
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "34b21dc5-c687-465e-abfa-abb23c1c560e",
    "metadata": {},
    "outputs": [],
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "5f9d7713-e46b-4d10-8593-abf83437e2bd",
    "metadata": {},
    "outputs": [
@@ -106,18 +116,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tania 2024-03-21 09:45:00\n",
-      "Tania 2024-04-12 09:45:00\n",
-      "PT session w/Tania Simonetti 2024-04-19 09:45:00\n",
-      "PT session w/Tania Simonetti 2024-04-26 09:45:00\n"
+      "Tania 2024-06-07 07:45:00\n"
      ]
     }
    ],
    "source": [
     "from_date = START_DATE.astimezone().isoformat()\n",
     "events_result = service.events().list(\n",
-    "    #calendarId='primary', \n",
-    "    calendarId='sjor2ciqns5rju6bd7u6tlis8k@group.calendar.google.com', \n",
+    "    calendarId='primary',  # Main calendar\n",
+    "    #calendarId='sjor2ciqns5rju6bd7u6tlis8k@group.calendar.google.com',  # Treino\n",
     "    timeMin=from_date, # timeMax=to_date,\n",
     "    maxResults=999, singleEvents=True,\n",
     "    orderBy='startTime').execute()\n",
